syntax = "proto3";

option go_package = "ulambda/machine/proto";

service User {
  rpc BootNoded(MachineRequest) returns (MachineResponse);
  rpc ShutdownNoded(MachineRequest) returns (MachineResponse);
}

message MachineRequest {
	string nodedId = 1;
}

message MachineResponse {
  bool oK = 1;
}
