syntax = "proto3";

option go_package = "ulambda/realm/proto";

service RealmMgr {
  rpc GrantCores(RealmMgrRequest) returns (RealmMgrResponse);
  rpc RevokeCores(RealmMgrRequest) returns (RealmMgrResponse);
  rpc ShutdownRealm(RealmMgrRequest) returns (RealmMgrResponse);
}

message RealmMgrRequest {
	int64 ncores = 1;
  bool allCores = 2;
  bool hardReq = 3;
  string nodedId = 4;
}

message RealmMgrResponse {
  bool oK = 1;
}
